<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pgutierrezd.becaidspracticav2.RegisterActivitiesActivity"
    tools:showIn="@layout/activity_register_activities">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lblTitleRegister"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btnDisplayCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/textColor"
                android:text="@string/dateButtonSet"
                android:padding="5dp"
                android:layout_below="@+id/titleRegister"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/lblSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                tools:text="@string/dateSelected"
                android:layout_below="@+id/btnDisplayCalendar"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spnrProyecto"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/lblSetDate"/>

            <Spinner
                android:id="@+id/spnrActivityType"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/lblSetDate"/>

            <TextView
                android:id="@+id/lbl_title_hrs"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/titleHoras"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/spnrActivityType"
                android:layout_alignRight="@+id/spnrActivityType"/>

            <EditText
                android:id="@+id/txtInputHrs"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintHrsSelected"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_below="@+id/lbl_title_hrs"
                android:inputType="numberDecimal"
                android:layout_alignRight="@+id/lbl_title_hrs"/>

            <TextView
                android:id="@+id/lbl_title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblActivityRegister"
                android:layout_below="@id/txtInputHrs"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/txtDescriptionActivityDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:maxLines="5"
                android:textColor="@color/colorAccent"
                android:lines="4"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:layout_below="@+id/lbl_title_description"/>

            <Button
                android:id="@+id/btnSaveActivityDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAltaActividad"
                android:background="@color/colorAccent"
                android:textColor="@color/textColor"
                android:layout_below="@+id/txtDescriptionActivityDay"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
